# google-meridian-mcp-server

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  fastmcp.json  pyproject.toml
.claude/: settings.json
.claude/agents/: test-writer.md
.claude/skills/run-tests/: SKILL.md
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
deploy/: Dockerfile.worker  Dockerfile.worker.gpu  README.md  cloudbuild.yaml  deploy_jobs.sh
deploy/terraform/: README.md  backend.hcl.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
docs/: architecture-review.md  meridian-mcp-showcase-parity.md
docs/superpowers/plans/: 2026-06-25-live-validation-suite-and-parity.md  2026-06-25-repo-cleanup-columnar-outputs.md  2026-06-26-spend-scenario-tool.md  2026-06-29-model-fit-geo-filtering.md  (+7 more)
scripts/: generate_validation_models.py  live_verify.py
scripts/validation/: __init__.py  cloud_fake.py  cloud_smoke.py  live_validate.py  matrix.py  remote_smoke.py  runner.py
skills/meridian-analyst/: SKILL.md
src/google_meridian_mcp_server/: __init__.py  bootstrap.py  config.py  server.py
tests/: conftest.py
tests/contract/: test_analysis_tools.py  test_list_models_tool.py  test_meridian_modelfit_contract.py  test_optimization_tools.py  test_response_curve_tool.py  test_skill_provider.py
tests/fakes/: fake_gcs.py
tests/integration/: test_cached_analysis.py  test_gcs_optimization_registry.py  test_model_providers.py
tests/unit/: test_analysis_service.py  test_analyzer_facade.py  test_bootstrap.py  test_catalog_and_loader.py  test_channel_data.py  test_cloud_run_executor.py  test_config_and_persistence.py  test_dataset_mapper.py  test_interrogator.py  test_model_catalog_service.py  test_optimization_config.py  test_optimization_mapping.py  test_optimization_run_registry.py  test_optimization_service.py  test_optimization_worker.py  test_optimizer_facade.py  test_remote_smoke.py  test_result_cache.py  test_routing.py  test_runtime_config.py  test_server.py  test_subprocess_executor.py  test_transport_tools.py  test_validation_matrix.py  test_validation_runner.py
(+51 files in other folders)
