[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-meridian-mcp-server"
version = "0.1.0"
description = "FastMCP server exposing Google Meridian MMM analysis to agents"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastmcp>=3.2.0,<4",
    "google-meridian[schema]==1.5.3",
    "google-cloud-storage>=3.3.0,<4",
    "pydantic>=2.10,<3",
    "python-dotenv>=1.2.1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.11,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 88
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
extend-exclude = [
    ".specify",
    "references",
    "src/google_meridian_mcp_server.egg-info",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
