[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-meridian-mcp-server"
version = "0.1.0"
description = "FastMCP server exposing Google Meridian MMM analysis to agents"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastmcp>=3.4,<4",
    "google-meridian[schema]==1.7.0",
    "google-cloud-storage>=3.12,<4",
    "pydantic>=2.13,<3",
    "python-dotenv>=1.2.1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "pytest-asyncio>=0.23",
    "ruff>=0.15,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 88
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]
extend-exclude = [
    "references",
    "src/google_meridian_mcp_server.egg-info",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
